fixed typo in previous commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1684,9 +1684,9 @@ elseif(WINDOWS)
     if(HAVE_HIDAPI)
       set(SOURCE_FILES ${SOURCE_FILES} ${SDL2_SOURCE_DIR}/src/hidapi/windows/hid.c)
     endif()
-    if (NOT WINDOWS_STORE)
+    if(NOT WINDOWS_STORE)
       set(SDL_JOYSTICK_RAWINPUT 1)
-    endif
+    endif()
     file(GLOB JOYSTICK_SOURCES ${SDL2_SOURCE_DIR}/src/joystick/windows/*.c)
     set(SOURCE_FILES ${SOURCE_FILES} ${JOYSTICK_SOURCES})
     if(HAVE_DINPUT_H)
