VisualC: Update project to V142 for can compile.

--- a/.gitignore
+++ b/.gitignore
@@ -68,18 +68,24 @@ Release
 *.ncb
 *.suo
 *.sdf
+VisualC/tests/controllermap/axis.bmp
+VisualC/tests/controllermap/button.bmp
+VisualC/tests/controllermap/controllermap.bmp
+VisualC/tests/controllermap/controllermap_back.bmp
 VisualC/tests/loopwave/sample.wav
 VisualC/tests/testautomation/CompareSurfaces0001_Reference.bmp
 VisualC/tests/testautomation/CompareSurfaces0001_TestOutput.bmp
 VisualC/tests/testgamecontroller/axis.bmp
 VisualC/tests/testgamecontroller/button.bmp
 VisualC/tests/testgamecontroller/controllermap.bmp
+VisualC/tests/testgamecontroller/controllermap_back.bmp
 VisualC/tests/testoverlay2/moose.dat
 VisualC/tests/testrendertarget/icon.bmp
 VisualC/tests/testrendertarget/sample.bmp
 VisualC/tests/testscale/icon.bmp
 VisualC/tests/testscale/sample.bmp
 VisualC/tests/testsprite2/icon.bmp
+VisualC/tests/testyuv/testyuv.bmp
 VisualC/visualtest/icon.bmp
 VisualC/visualtest/testquit.actions
 VisualC/visualtest/testquit.config
