attempt to fix cmake builds with libdecor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2594,7 +2594,7 @@ if(SDL_SHARED)
     set_property(TARGET SDL2 APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
   endif()
   if(WAYLAND_LIBDECOR)
-    target_include_directories(SDL2 PRIVATE "${libdecor_INCLUDE_DIRS}")
+    target_include_directories(SDL2 PRIVATE "${LIBDECOR_INCLUDE_DIRS}")
   endif()
 endif()
 
@@ -2648,8 +2648,8 @@ if(SDL_STATIC)
     set_property(TARGET SDL2-static APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
   endif()
   if(WAYLAND_LIBDECOR)
-    target_include_directories(SDL2-static PRIVATE "${libdecor_INCLUDE_DIRS}")
-    target_link_libraries(SDL2-static "${libdecor_LIBRARIES}")
+    target_include_directories(SDL2-static PRIVATE "${LIBDECOR_INCLUDE_DIRS}")
+    target_link_libraries(SDL2-static "${LIBDECOR_LIBRARIES}")
   endif()
 endif()
 
