--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -389,6 +389,7 @@ set_option(VIDEO_X11           "Use X11 video driver" ${UNIX_SYS})
 set_option(VIDEO_WAYLAND       "Use Wayland video driver" ${UNIX_SYS})
 dep_option(WAYLAND_SHARED      "Dynamically load Wayland support" ON "VIDEO_WAYLAND" OFF)
 dep_option(WAYLAND_LIBDECOR    "Use client-side window decorations on Wayland" ON "VIDEO_WAYLAND" ON)
+dep_option(LIBDECOR_SHARED     "Dynamically load libdecor support" ON "WAYLAND_LIBDECOR" OFF)
 dep_option(VIDEO_WAYLAND_QT_TOUCH  "QtWayland server support for Wayland video driver" ON "VIDEO_WAYLAND" OFF)
 set_option(VIDEO_RPI           "Use Raspberry Pi video driver" ${UNIX_SYS})
 dep_option(X11_SHARED          "Dynamically load X11 support" ON "VIDEO_X11" OFF)
@@ -2593,9 +2594,6 @@ if(SDL_SHARED)
   if(IOS OR TVOS)
     set_property(TARGET SDL2 APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
   endif()
-  if(WAYLAND_LIBDECOR)
-    target_include_directories(SDL2 PRIVATE "${LIBDECOR_INCLUDE_DIRS}")
-  endif()
 endif()
 
 if(ANDROID)
@@ -2646,10 +2644,6 @@ if(SDL_STATIC)
   endif()
   if(IOS OR TVOS)
     set_property(TARGET SDL2-static APPEND_STRING PROPERTY COMPILE_FLAGS "-fobjc-arc")
-  endif()
-  if(WAYLAND_LIBDECOR)
-    target_include_directories(SDL2-static PRIVATE "${LIBDECOR_INCLUDE_DIRS}")
-    target_link_libraries(SDL2-static "${LIBDECOR_LIBRARIES}")
   endif()
 endif()
 
