--- a/include/SDL_config.h.in
+++ b/include/SDL_config.h.in
@@ -79,6 +79,7 @@
 #undef HAVE_LIBUNWIND_H
 
 /* C library functions */
+#undef HAVE_DLOPEN
 #undef HAVE_MALLOC
 #undef HAVE_CALLOC
 #undef HAVE_REALLOC
@@ -451,6 +452,9 @@
 #undef SDL_ALTIVEC_BLITTERS
 #undef SDL_ARM_SIMD_BLITTERS
 #undef SDL_ARM_NEON_BLITTERS
+
+/* Whether SDL_DYNAMIC_API needs dlopen() */
+#undef DYNAPI_NEEDS_DLOPEN
 
 /* Enable ime support */
 #undef SDL_USE_IME
