Fix 32-bit Linux build on 64-bit host system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1282,28 +1282,43 @@ elseif(UNIX AND NOT APPLE AND NOT ANDROID AND NOT RISCOS AND NOT HAIKU)
       set(HAVE_INOTIFY 1)
     endif()
 
+    # Cater for both multilib and multiarch, native and cross-compiling build
+    find_path(DBUS_H_INCLUDE_DIRS NAMES dbus/dbus.h PATH_SUFFIXES dbus-1.0)
+    if(ARCH_64)
+      set(DBUS_INC_SEARCH_PATH /usr/lib64/dbus-1.0/include /usr/lib/x86_64-linux-gnu/dbus-1.0/include)
+    else()
+      set(DBUS_INC_SEARCH_PATH /usr/lib/dbus-1.0/include /usr/lib/i386-linux-gnu/dbus-1.0/include)
+    endif()
+    find_path(DBUS_ARCH_DEPS_H_INCLUDE_DIRS NAMES dbus/dbus-arch-deps.h PATHS ${DBUS_INC_SEARCH_PATH} /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}/dbus-1.0/include)
+    if(DBUS_H_INCLUDE_DIRS AND DBUS_ARCH_DEPS_H_INCLUDE_DIRS)
+      set(HAVE_DBUS_DBUS_H TRUE)
+      include_directories(SYSTEM ${DBUS_H_INCLUDE_DIRS} ${DBUS_ARCH_DEPS_H_INCLUDE_DIRS})
+      list(APPEND EXTRA_LIBS dbus-1)
+    endif()
+
+    find_path(IBUS_H_INCLUDE_DIRS NAMES ibus.h PATH_SUFFIXES ibus-1.0)
+    find_path(GLIB_H_INCLUDE_DIRS NAMES glib.h PATH_SUFFIXES glib-2.0)
+    if(ARCH_64)
+      set(GLIB_INC_SEARCH_PATH /usr/lib64/glib-2.0/include /usr/lib/x86_64-linux-gnu/glib-2.0/include)
+    else()
+      set(GLIB_INC_SEARCH_PATH /usr/lib/glib-2.0/include /usr/lib/i386-linux-gnu/glib-2.0/include)
+    endif()
+    find_path(GLIB_CONFIG_H_INCLUDE_DIRS NAMES glibconfig.h PATHS ${GLIB_INC_SEARCH_PATH} /usr/lib/${CMAKE_LIBRARY_ARCHITECTURE}/glib-2.0/include)
+    if(IBUS_H_INCLUDE_DIRS AND GLIB_H_INCLUDE_DIRS AND GLIB_CONFIG_H_INCLUDE_DIRS)
+      set(HAVE_IBUS_IBUS_H TRUE)
+      include_directories(SYSTEM ${IBUS_H_INCLUDE_DIRS} ${GLIB_H_INCLUDE_DIRS} ${GLIB_CONFIG_H_INCLUDE_DIRS})
+      list(APPEND EXTRA_LIBS ibus-1.0)
+      set(SDL_USE_IME 1)
+    endif()
+
+    find_path(FCITX_H_INCLUDE_DIRS fcitx/frontend.h)
+    if(FCITX_H_INCLUDE_DIRS)
+      set(HAVE_FCITX TRUE)
+      include_directories(SYSTEM ${FCITX_H_INCLUDE_DIRS})
+      set(SDL_USE_IME 1)
+    endif()
+
     if(PKG_CONFIG_FOUND)
-      pkg_search_module(DBUS dbus-1 dbus)
-      if(DBUS_FOUND)
-        set(HAVE_DBUS_DBUS_H TRUE)
-        include_directories(${DBUS_INCLUDE_DIRS})
-        list(APPEND EXTRA_LIBS ${DBUS_LIBRARIES})
-        # Fcitx need only dbus.
-        set(HAVE_FCITX TRUE)
-      endif()
-
-      pkg_search_module(IBUS ibus-1.0 ibus)
-      if(IBUS_FOUND)
-        set(HAVE_IBUS_IBUS_H TRUE)
-        include_directories(${IBUS_INCLUDE_DIRS})
-        list(APPEND EXTRA_LIBS ${IBUS_LIBRARIES})
-      endif()
-
-      if (HAVE_IBUS_IBUS_H OR HAVE_FCITX)
-        set(SDL_USE_IME TRUE)
-        add_definitions(-DSDL_USE_IME)   # !!! FIXME: why isn't this a definition and not in SDL_config.h.cmake?
-      endif()
-        
       if(FREEBSD AND NOT HAVE_INOTIFY)
         pkg_search_module(INOTIFY libinotify)
         if(INOTIFY_FOUND)
