--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1489,9 +1489,7 @@ if(ANDROID)
       endif()
     endif()
   endif()
-  if(TARGET SDL3-shared)
-    target_link_options(SDL3-shared PRIVATE -Wl,--version-script=${CMAKE_CURRENT_LIST_DIR}/../android-project/android.export.sym)
-  elseif(TARGET SDL3-static)
+  if(TARGET SDL3-static)
     target_link_options(SDL3-static PRIVATE -Wl,--version-script=${CMAKE_CURRENT_LIST_DIR}/../android-project/android.export.sym)
   endif()
 
