--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -75,7 +75,7 @@ jobs:
         if: ${{ matrix.platform.android-ndk }}
         id: setup-ndk
         with:
-          local-cache: true
+          local-cache: false
           ndk-version: r28c
       - name: 'Configure Android NDK variables'
         if: ${{ matrix.platform.android-ndk }}
