--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -534,7 +534,7 @@ jobs:
       - name: 'Setup Android NDK'
         uses: nttld/setup-ndk@v1
         with:
-          local-cache: true
+          local-cache: false
           ndk-version: r28c
       - name: 'Setup Java JDK'
         uses: actions/setup-java@v4
@@ -607,8 +607,14 @@ jobs:
           python "${{ needs.src.outputs.project }}-${{ needs.src.outputs.version }}.aar" -o /tmp/SDL3-android
           echo "prefix=/tmp/SDL3-android" >>$GITHUB_OUTPUT
           echo "sdl3-aar=/tmp/${{ needs.src.outputs.project }}-${{ needs.src.outputs.version }}.aar" >>$GITHUB_OUTPUT
+      - name: 'Verify alignment of libSDL3.so (arm64-v8a/x86_64)'
+        run: |
+          set -e
+          ${{ steps.src.outputs.path }}/build-scripts/check_elf_alignment.sh ${{ steps.sdk.outputs.prefix }}/lib/arm64-v8a/libSDL3.so
+          ${{ steps.src.outputs.path }}/build-scripts/check_elf_alignment.sh ${{ steps.sdk.outputs.prefix }}/lib/x86_64/libSDL3.so
       - name: 'CMake (configure + build) x86, x64, arm32, arm64'
         run: |
+          set -e
           android_abis="x86 x86_64 armeabi-v7a arm64-v8a"
           for android_abi in ${android_abis}; do
             echo "Configuring ${android_abi}..."
