--- a/VisualC-GDK/SDL/SDL.vcxproj
+++ b/VisualC-GDK/SDL/SDL.vcxproj
@@ -330,18 +330,21 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\SDL3\SDL_begin_code.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_camera.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_close_code.h" />
     <ClInclude Include="..\..\include\SDL3\SDL.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_assert.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_asyncio.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_atomic.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_audio.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_begin_code.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_bits.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_blendmode.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_camera.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_clipboard.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_close_code.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_copying.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_cpuinfo.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_dialog.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_dlopennote.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_egl.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_endian.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_error.h" />
@@ -351,9 +354,11 @@
     <ClInclude Include="..\..\include\SDL3\SDL_gpu.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_guid.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_haptic.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_hints.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_hidapi.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_asyncio.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_hints.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_init.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_intrin.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_iostream.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_joystick.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_keyboard.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_keycode.h" />
@@ -361,11 +366,13 @@
     <ClInclude Include="..\..\include\SDL3\SDL_locale.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_log.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_main.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_main_impl.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_messagebox.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_metal.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_misc.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_mouse.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_mutex.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_oldnames.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_opengl.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_opengl_glext.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_opengles.h" />
@@ -384,7 +391,6 @@
     <ClInclude Include="..\..\include\SDL3\SDL_rect.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_render.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_revision.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_iostream.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_scancode.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_sensor.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_stdinc.h" />
@@ -406,7 +412,7 @@
     <ClInclude Include="..\..\include\SDL3\SDL_time.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_timer.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_touch.h" />
-    <ClInclude Include="..\..\include\SDL3\SDL_types.h" />
+    <ClInclude Include="..\..\include\SDL3\SDL_tray.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_version.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_video.h" />
     <ClInclude Include="..\..\include\SDL3\SDL_vulkan.h" />
